# insurance-mathematics

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  tests.py
1_Inputs/: Policy_model.json
2_Main/: ibnr_triangle_free.py
2_Scripts/: frequency_severity.py
3_Tools/: smooth_PeronaMalik.py
4_Notebooks/: seasonality_FFT.html
Notebooks/Name_standardizations/: messy_data.csv  name_standardizations.ipynb
Scripts/: ibnr_triangle_free.py  lib_name_standardizations.py  loss_distribution.py
Scripts/Testing/: Loss_out.csv  Loss_out.json  Musterkunde.json  ibnr_policy_1.json  ibnr_policy_1_out.json
backend/: bayesian_fleet_frequency.py  claim_size_visualizer.py  ibnr_triangle_free.py  loss_distribution.py
backend/Fakedata/: COLLATERAL_FILE.csv  INDIVIDUAL_CLAIMS.csv  delays.json  loss_input.json  policy_1.json
backend/Testing/: RISK_FILE.csv
examples/: Policy_model.json
ins_mat/agg_dist/: agg_base.py  agg_sim.py  fft_nb.py  fft_poisson.py
ins_mat/lib/: empirical_asset_test.py  nb.py  risk_neutral.py
ins_mat/special/: credit.py  risk.py  underwriter.py
ins_mat/tests/: credit_test.py  credit_underwriting.py  fft_nb_test.py  fft_poisson_test.py  mc_test.py
notebooks/: triangle-free-ibnr.ipynb
old/: seasonality.py  smooth_PeronaMalik.py
pkg/lib/: nb.py
pkg/src/: agg_base.py  agg_sim.py  fft_nb.py  fft_poisson.py
pkg/tests/: fft_nb_test.py  mc_test.py  (+2 more)
src/: agg.py  agg_base.py
tests/: context.py  fft_nb_test.py  fft_pois_test.py  fft_test.py  mc_test.py  merton_jump.py  merton_jump_test.py  sim_test.py  test_fft_nb.py  test_fft_pois.py
(+6 files in other folders)
